add redis and django-redis

--- a/Django_Redis/使用说明.md
+++ b/Django_Redis/使用说明.md
@@ -1,7 +1,102 @@
 # Django 缓存模块的应用
 --------------------------
 #### 目前进度
-1. 未开始
+
+1. 尝试用python 自带的redis 缓存数据库
+
+        1.利用 redis 库 操作缓存数据
+
+        >>> import redis
+        >>> r = redis.StrictRedis(host='localhost', port=6379, db=0)
+        >>> r.set('foo', 'bar')
+        True
+        >>> r.get('foo')
+        'bar'
+
+        或者
+
+        >>> pool = redis.ConnectionPool(host='localhost', port=6379, db=0)
+        >>> r = redis.Redis(connection_pool=pool)
+
+        2.利用管道流 操作 redis 缓存
+
+        >>> r = redis.Redis(...)
+        >>> r.set('bing', 'baz')
+        >>> # Use the pipeline() method to create a pipeline instance
+        >>> pipe = r.pipeline()
+        >>> # The following SET commands are buffered
+        >>> pipe.set('foo', 'bar')
+        >>> pipe.get('bing')
+        >>> # the EXECUTE call sends all buffered commands to the server, returning
+        >>> # a list of responses, one for each command.
+        >>> pipe.execute()
+        [True, 'baz']
+
+
+        3.with 自动关闭新建的管道
+        with r.pipeline() as pipe:
+            while True:
+                try:
+                    pipe.watch('OUR-SEQUENCE-KEY')
+                    current_value = pipe.get('OUR-SEQUENCE-KEY')
+                    next_value = int(current_value) + 1
+
+
 #### 用到的库
 
+
         1. django-redis
+
+        2. redis
+
+        3. hiredis  #  centos 已安装python-devel  但依旧提示找不到python.h
+
+
+## redis
+
+        redis 直接用数字标名明所使用的数据库
+        在 /etc/redis.conf 下的 databases 选择项中可以设置最大的数据库数量
+
+## linux 通配符
+
+        * 代表0 个到无穷多个任意字符 。
+
+        ? 代表一定有一个任意字符 。
+
+        [ ] 同样代表一定有一个在括号内的字符(非任意字符)。例如 [abcd] 代表一定有一个字符， 可能是 a, b, c, d 这四个任何一个 。
+
+        [ - ] 若有减号在中括号内时，代表在编码顺序内的所有字符。例如 [0-9] 代表 0 到 9 之间的所有数字，因为数字的语系编码是连续的。
+
+        [^ ] 若中括号内的第一个字符为指数符号 (^) ，那表示反向选择，例如 [^abc] 代表 一定有一个字符，只要是非 a, b, c 的其他字符就接受的意思。
+
+        # 批注符号：这个最常被使用在 script 当中，视为说明在后的数据均不运行 。
+
+        \ 跳脱符号：将" 特殊字符或通配符" 还原成一般字符 。
+
+        | 管道 (pipe)：分隔两个管道命令的界定。
+
+        ; 连续命令下达分隔符：连续性命令的界定。
+
+        ~ 用户的主目录 。
+
+        $ 取用变量前导符：变量之前需要加的取代值
+
+        & 工作控制 (job control)：将命令变成后台工作
+
+        ! 逻辑运算意义上的"非" not 的意思。
+
+        / 目录符号：路径分隔的符号
+
+        >, >> 数据流重导向：输出导向，分别是" 取代" 与" 累加" 。
+
+        <, << 数据流重导向：输入导向。
+
+        ' ' 单引号，不具有变量置换的功能。
+
+        " " 具有变量置换的功能。
+
+        ` ` 两个" ` " 中间为可以先运行的命令，亦可使用 $( ) 。
+
+        ( ) 在中间为子 shell 的起始与结束 。
+
+        { } 在中间为命令区块的组合。
