添加各种app使用

--- a/Django_Redis/使用说明.md
+++ b/Django_Redis/使用说明.md
@@ -5,3 +5,9 @@
 #### 用到的库
 
         1. django-redis
+
+2. redis 配置
+    
+        1. yum install redis 
+    
+        2. 修改 /etc/redis.conf 文件中的 bind 127.0.0.1  
